tests/ui/specialization/issue-59435.stderr
error[E0277]: the trait bound `MyStruct: Default` is not satisfied
  --> $DIR/issue-59435.rs:11:27
   |
LL |     default type MyType = MyStruct;
   |                           ^^^^^^^^ the trait `Default` is not implemented for `MyStruct`
   |
note: required by a bound in `MyTrait::MyType`
  --> $DIR/issue-59435.rs:7:18
   |
LL |     type MyType: Default;
   |                  ^^^^^^^ required by this bound in `MyTrait::MyType`
help: consider annotating `MyStruct` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | struct MyStruct {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
